--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <!-- favicons Icons -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
-  <meta name="description" content="Fallspa - Beauty & Spa Center HTML Template" />
+  <meta name="description" content="Gentle Wellness Medi-Spa" />
 
   <!-- fonts -->
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -23,7 +23,7 @@
   <link rel="stylesheet" href="assets/css/responsive.css">
   
 
-  <title>Fallspa - Beauty & Spa Center HTML Template</title>
+  <title>Gentle Wellness Medi-Spa</title>
 </head>
 <body class="custom-cursor">
   <div class="custom-cursor__cursor"></div>
