--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,9 @@
   <link rel="stylesheet" href="assets/css/default.css">
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/responsive.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Labrada&display=swap" rel="stylesheet">
   
 
   <title>Gentle Wellness Medi-Spa</title>
